# waveshareControl

./: Waveshare ESP32-S3 2.06inch AMOLED touch
RelayBoard/: RelayBoard.ino  WS_Dout.cpp  WS_Dout.h  WS_GPIO.cpp  WS_GPIO.h  WS_Struct.h
SmartWatch/: CMakeLists.txt  SmartWatch.ino  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_brightnessSCR.c  ui_events.h  ui_font_secfont.c  ui_font_small.c  ui_font_timeFont.c  ui_helpers.c  ui_helpers.h  ui_img_1107282690.c  ui_img_1512711676.c  ui_img_1970314926.c  ui_menuSCR.c  ui_offTimeSCR.c  ui_setDateSCR.c  ui_setSCR.c  ui_switchesSCR.c
